--- a/snake/index.html
+++ b/snake/index.html
@@ -10,6 +10,6 @@
     <script src="sketch.js"></script>
 		<script src="Snake.js"></script>
 		<script src="Food.js"></script>
-  
-
+    
+    ALTERADO NO CLONE
 </body></html>
