--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -11,18 +11,20 @@
 	<script src="libraries/p5.dom.js"></script>
 	<script src="libraries/p5.sound.js"></script>
 	<script src="sketch.js"></script>
+	<script src="Cell.js"></script>
 
 	<style>
 		body {
 			margin:0;
 			padding:0;
 			overflow: hidden;
+			text-align: center
 		}
 		canvas {
 			margin:auto;
 		}
 	</style>
 </head>
-<body>
+<body oncontextmenu="return false;">
 </body>
 </html>
