--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -12,6 +12,7 @@
 	<script src="libraries/p5.sound.js"></script>
 	<script src="sketch.js"></script>
 	<script src="Cell.js"></script>
+	<script src="Box.js"></script>
 
 	<style>
 		body {
