--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -9,10 +9,11 @@
 
 	<script src="libraries/p5.js"></script>
 	<script src="libraries/p5.dom.js"></script>
-	<script src="libraries/p5.sound.js"></script>
+	<!-- <script src="libraries/p5.sound.js"></script> -->
 	<script src="sketch.js"></script>
 	<script src="Cell.js"></script>
 	<script src="Box.js"></script>
+	<script src="Generator.js"></script>
 
 	<style>
 		body {
