--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -15,12 +15,14 @@
 	<script src="Box.js"></script>
 	<script src="Generator.js"></script>
 
+	<link rel="stylesheet" type="text/css" href="style.css">
+
 	<style>
 		body {
 			margin:0;
 			padding:0;
 			overflow: hidden;
-			text-align: center
+			text-align: center;
 		}
 		canvas {
 			margin:auto;
